--- a/settings.gradle
+++ b/settings.gradle
@@ -5,12 +5,9 @@ pluginManagement {
         mavenCentral()
     }
 }
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+
 rootProject.name = "LookingScooters"
 include ':app'
+include ':domain'
+include ':shared'
+include ':data'
